--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,7 @@ html(lang="en")
 		title Pidela.info
 		link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/flatly/bootstrap.min.css", rel="stylesheet")
 		link(href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.9.1/bootstrap-table.min.css", rel="stylesheet")
-		link(href="styles/app.css", rel="stylesheet")
+		link(href="/styles/app.css", rel="stylesheet")
 
 	body
 		.navbar.navbar-default.navbar-fixed-top(role="navigation")
@@ -16,7 +16,7 @@ html(lang="en")
 						span.icon-bar
 						span.icon-bar
 						span.icon-bar
-					a.navbar-brand(href="#") Pidela.info
+					a.navbar-brand(href="/") Pidela.info
 				.navbar-collapse.collapse
 					ul.nav.navbar-nav
 						li.active
@@ -43,44 +43,18 @@ html(lang="en")
 									a(href="#") link5
 					ul.nav.navbar-nav.navbar-right
 						li
-							a(href="//wordpress.com") link6
+							a(href="#") link6
 						li
-							a(href="//calypso.com") link7
+							a(href="#") link7
 						li
-							a(href="#",data-toggle="modal",data-target="#cta-form-holder") Envía una pregunta
+							a(href="/enviar-pregunta") Envía una pregunta
 		div.container-fluid.app-holder
 
-		block content
+			block content
 
-		#cta-form-holder.modal.fade(tabindex='-1',role='dialog',aria-labelledby='enviaTuPregunta')
-			.modal-dialog(role='document')
-				.modal-content
-					.modal-header
-						button.close(type='button',data-dismiss='modal',aria-label='Close')
-							span(aria-hidden='true') ×
-						h4#enviaTuPregunta.modal-title Envía tu pregunta a una entidad
-					.modal-body
-						form#ctaForm
-							.form-group
-								label(for='ctaFormAgency') Entidad del Estado&times;
-								select#ctaFormAgency.form-control(name='agencyId')
-									option(value='') Elija una
-							.form-group
-								label(for='ctaFormAuthor') Email&times; (nunca lo usaremos para publicidad)
-								input#ctaFormAuthor.form-control(type='email',placeholder='Email',name='author')
-							.form-group
-								label(for='ctaFormTitle') Título&times; (mínimo 5 carácteres, máximo 52)
-								input#ctaFormTitle.form-control(type='text',placeholder='Título',name='title')
-							.form-group
-								label(for='ctaContent') Mensaje&times; (mínimo 40 carácteres, máximo 400)
-								textarea#ctaFormContent.form-control(rows='3',placeholder='Mensaje',name='content')
-							.form-group
-								p.collapse.js-ctaFormErrorMessage Por favor revisa los campos
-								p.collapse.js-ctaFormSuccessMessage Tu pregunta fue enviada
-							button.btn.btn-default(type='submit') Enviar
-
-	script(src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js")
-	script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js")
-	script(src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.9.1/bootstrap-table.min.js")
-	script(src="scripts/app.js")
+	script(src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js",type="text/javascript")
+	script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js",type="text/javascript")
+	script(src="//cdnjs.cloudflare.com/ajax/libs/speakingurl/7.0.0/speakingurl.min.js",type="text/javascript")
+	script(src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment-with-locales.min.js",type="text/javascript")
+	script(src="/scripts/bundle.js",type="text/javascript")
 	block scripts
