--- a/views/index.jade
+++ b/views/index.jade
@@ -1,12 +1,60 @@
 extends ./layout.jade
 
 block content
-	div.content-fix-top.index-holder.js-content(data-api-url="#{apiUrl}",data-view="index")
-		h4 Resultados
-		div.results.js-questions
-			- each question in questions
-				div(data-id=question.id,class="question")
-					a(href="/preguntas/" + question.id + "/" + question.slug)
-						h4=question.title
-						span=agencies[question.agencyId]
-						p=question.formattedDate
+	div.index-holder.js-content(data-api-url="#{apiUrl}",data-view="index")
+		div.jumbotron.part.part-1.intro
+			h2 Obtén respuestas del gobierno
+				br
+				| y del sector público
+			h4.one-line-intro Haz una 
+				a(href="//es.wikipedia.org/wiki/Libertad_de_informaci%C3%B3n") Solicitud de Información (SDI) 
+				| a una Entidad del Estado
+			p#como-funciona o 
+				a(href="/buscar-preguntas") busca en las #{questionsCount} preguntas hechas 
+				| a #{agencies.length} Entidades del Estado
+		div.hidden-xs.hidden-sm.hidden-md.cta-holder
+			h4 ¿Quiéres hacer una pregunta?
+			p Pídeles la info
+			a.btn.btn-success(href="/enviar-pregunta") Envía una pregunta
+		div.part.part-2.how-it-works
+			h3 ¿Cómo funciona?
+			p Queremos darte la oportunidad de hacer preguntas a las Entidades del estado
+			p Pidela.info te ayuda a realizar Solicitudes de Información y las publica online.
+			div.steps
+				div.step.step-1
+					p Utiliza este sitio para hacer Solicitudes de Información – te mostraremos como hacerlo
+					p.step-number 1
+				div.step.step-2
+					p Te enviaremos un e-mail al momento que tu Solicitud reciba una respuesta
+					p.step-number 2
+				div.step.step-3
+					p Publicaremos la respuesta en línea así todos podrán favorecerse de este acceso de información
+					p.step-number 3
+				div.hidden-xs.hidden-sm.steps-line
+			div.learn-more
+				a.btn.btn-info(href="//google.com") Conoce más sobre el proyecto 
+					i.fa.fa-arrow-right
+		hr
+		div.part.part-3.more-info-holder
+			div.row
+				div.col-md-6
+					h4 ¿A quiénes les puedo hacer preguntas?
+					p Estas son las Entidades del Estado con las que estamos trabajando
+					ul.agencies(data-agencies=agencies)
+						- each agency in agencies
+							li
+								h4=agency.name
+				hr.hidden-sm.hidden-md.hidden-lg
+				div.col-md-6
+					h4 ¿Cuáles son las últimas preguntas que se han hecho?
+					div.search-holder.js-search-holder
+						div.form-group
+							input.form-control.js-question-search(type="text",placeholder="Buscar pregunta")
+					div.results.js-questions(data-parsed-agencies=parsedAgencies,data-questions=questions)
+						- each question in questions
+							div.question.js-question(data-id=question.id,data-title=question.title)
+								a(href="/preguntas/" + question.id + "/" + question.slug)
+									h4=question.title
+									span=parsedAgencies[question.agencyId]
+									p=question.formattedDate
+		hr
