--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,9 +3,12 @@ html(lang="en")
 
 	head
 		title Pidela.info
+		meta(name="viewport",content="width=device-width, initial-scale=1")
 		link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/flatly/bootstrap.min.css", rel="stylesheet")
 		link(href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.9.1/bootstrap-table.min.css", rel="stylesheet")
+		link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css", rel="stylesheet")
 		link(href="/styles/app.css", rel="stylesheet")
+		block head
 
 	body
 		.navbar.navbar-default.navbar-fixed-top(role="navigation")
@@ -19,42 +22,33 @@ html(lang="en")
 					a.navbar-brand(href="/") Pidela.info
 				.navbar-collapse.collapse
 					ul.nav.navbar-nav
-						li.active
-							a(href="#") Inicio
-						li
-							a(href="#about") Acerca
-						li
-							a(href="#contact") Contacto
-						li.dropdown
-							a.dropdown-toggle(href="#", data-toggle="dropdown") Más info
-								span.caret
-							ul.dropdown-menu(role="menu")
-								li
-									a(href="#") link1
-								li
-									a(href="#") link2
-								li
-									a(href="#") link3
-								li.divider
-								li.dropdown-header Otros links
-								li
-									a(href="#") link4
-								li
-									a(href="#") link5
+						li.active.navbar-section.navbar-home
+							a(href="/") Inicio
+						li.navbar-section.navbar-send-question
+							a(href="/enviar-pregunta") Envía una pregunta
+						li.navbar-section.navbar-browse-questions
+							a(href="/buscar-preguntas") Buscar preguntas
 					ul.nav.navbar-nav.navbar-right
 						li
-							a(href="#") link6
-						li
-							a(href="#") link7
-						li
-							a(href="/enviar-pregunta") Envía una pregunta
-		div.container-fluid.app-holder
+							a(href="/#como-funciona") Cómo funciona
+		div.container.app-holder
 
 			block content
+
+		div.container-fluid.footer-holder
+			div.container.part-.part-4.meta-holder
+				h3 Pidela.info
+				p Pidela.info es un proyecto de 
+					a(href="//hiperderecho.org") Hiperderecho.org
+				p Creado por 
+					a(href="//juanlajara.com", target="_blank") Juan La Jara
+				hr
 
 	script(src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js",type="text/javascript")
 	script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js",type="text/javascript")
 	script(src="//cdnjs.cloudflare.com/ajax/libs/speakingurl/7.0.0/speakingurl.min.js",type="text/javascript")
 	script(src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment-with-locales.min.js",type="text/javascript")
+	script(src="//cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.0/moment-timezone.min.js",type="text/javascript")
+	script(src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js")
 	script(src="/scripts/bundle.js",type="text/javascript")
 	block scripts
