change succesful question copy

--- a/views/question.jade
+++ b/views/question.jade
@@ -19,7 +19,7 @@ block content
 			p Esta pregunta tiene el estado de 
 				span.remark #{question.localizedStatus}
 		- if ( question.status === "successful" )
-			p Esta pregunta fue 
+			p La respuesta de esta pregunta fue 
 				span.remark Aceptada 
 				| por su autor
 		- if ( question.status === "unsuccessful" )
