--- a/views/layout.jade
+++ b/views/layout.jade
@@ -31,7 +31,8 @@ html(lang="en")
 					ul.nav.navbar-nav.navbar-right
 						li
 							a(href="/#como-funciona") Cómo funciona
-		div.container.app-holder
+		- var viewName = filename.split('/').pop().trim().split('.').shift()
+		div.container.app-holder.js-app-holder(data-view=viewName)
 
 			block content
 
@@ -53,17 +54,17 @@ html(lang="en")
 	script(src="/scripts/bundle.js",type="text/javascript")
 	block scripts
 
-	script(type='text/javascript').
-		var _paq = _paq || [];
-		_paq.push(['trackPageView']);
-		_paq.push(['enableLinkTracking']);
-		(function() {
-		var u="//hiperderecho.org/piwik/";
-		_paq.push(['setTrackerUrl', u+'piwik.php']);
-		_paq.push(['setSiteId', 5]);
-		var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-		g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-		})();
-	noscript
-		p
-			img(src='//hiperderecho.org/piwik/piwik.php?idsite=5', style='border:0;', alt='')
+	//- script(type='text/javascript').
+	//- 	var _paq = _paq || [];
+	//- 	_paq.push(['trackPageView']);
+	//- 	_paq.push(['enableLinkTracking']);
+	//- 	(function() {
+	//- 	var u="//hiperderecho.org/piwik/";
+	//- 	_paq.push(['setTrackerUrl', u+'piwik.php']);
+	//- 	_paq.push(['setSiteId', 5]);
+	//- 	var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+	//- 	g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+	//- 	})();
+	//- noscript
+	//- 	p
+	//- 		img(src='//hiperderecho.org/piwik/piwik.php?idsite=5', style='border:0;', alt='')
