--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,48 +2,59 @@ doctype html
 html(lang="en")
 
 	head
-		title Pidela.info
 		meta(name="viewport",content="width=device-width, initial-scale=1")
 		link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/flatly/bootstrap.min.css", rel="stylesheet")
 		link(href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.9.1/bootstrap-table.min.css", rel="stylesheet")
 		link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css", rel="stylesheet")
 		link(href="/styles/app.css", rel="stylesheet")
 		block head
+		title Pidela.info
 
 	body
-		.navbar.navbar-default.navbar-fixed-top(role="navigation")
-			.container
-				.navbar-header
-					button.navbar-toggle(type="button", data-toggle="collapse", data-target=".navbar-collapse")
-						span.sr-only Toggle navigation
-						span.icon-bar
-						span.icon-bar
-						span.icon-bar
-					a.navbar-brand(href="/") Pidela.info
-				.navbar-collapse.collapse
-					ul.nav.navbar-nav
-						li.active.navbar-section.navbar-home
-							a(href="/") Inicio
-						li.navbar-section.navbar-send-question
-							a(href="/enviar-pregunta") Envía una pregunta
-						li.navbar-section.navbar-browse-questions
-							a(href="/buscar-preguntas") Buscar preguntas
-					ul.nav.navbar-nav.navbar-right
-						li
-							a(href="/#como-funciona") Cómo funciona
+		.navbar.navbar-default.navbar-fixed-top.pidelainfo(role="navigation")
+			div.pidelainfo-brand-holder
+				div.container
+					a.pidelainfo-brand(href="/") Pidela.info
+			div.pidelainfo-navigation-holder
+				.container.pidelainfo-brand-fix
+					.navbar-header
+						button.navbar-toggle(type="button", data-toggle="collapse", data-target=".navbar-collapse")
+							span.sr-only Toggle navigation
+							span.icon-bar
+							span.icon-bar
+							span.icon-bar
+					.navbar-collapse.collapse
+						ul.nav.navbar-nav
+							li.active.navbar-section.navbar-home
+								a(href="/") Inicio
+							li.navbar-section.navbar-browse-questions
+								a(href="/solicitudes-enviadas") Solicitudes
+							li.navbar-section.navbar-send-question
+								a(href="/nueva-solicitud") Envía una solicitud
+						ul.nav.navbar-nav.navbar-right
+							li.navbar-how-it-works
+								a(href="/como-funciona") Cómo funciona
 		- var viewName = filename.split('/').pop().trim().split('.').shift()
-		div.container.app-holder.js-app-holder(data-view=viewName)
+		div.container.app-holder.pidelainfo.js-app-holder(data-view=viewName)
 
 			block content
 
-		div.container-fluid.footer-holder
-			div.container.part-.part-4.meta-holder
-				h3 Pidela.info
-				p Pidela.info es un proyecto de 
-					a(href="//hiperderecho.org") Hiperderecho.org
-				p Creado por 
-					a(href="//juanlajara.com", target="_blank") Juan La Jara
-				hr
+		div.container-fluid.pidelainfo.footer-holder
+			div.container.meta-holder
+				div.row
+					div.col-md-6
+						a(href="//hiperderecho.org")
+							img.img-responsive(src="/images/hiperderecho-logo.png")
+						p Un proyecto de Hiperderecho financiado por Hivos.
+					div.col-md-2.col-md-offset-4
+						a(href="//hivos.org")
+							img.img-responsive(src="/images/hivos-logo.png")
+		div.container-fluid.pidelainfo.footer-credits-holder
+			div.container
+				div.row
+					div.col-md-6
+						a(href="/creditos") Créditos
+					div.col-md-6 Todo el contenido de este sitio web es información pública. Úsalo como quieras.
 
 	script(src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js",type="text/javascript")
 	script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js",type="text/javascript")
@@ -51,8 +62,8 @@ html(lang="en")
 	script(src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment-with-locales.min.js",type="text/javascript")
 	script(src="//cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.0/moment-timezone.min.js",type="text/javascript")
 	script(src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js")
-	script(src="/scripts/bundle.js",type="text/javascript")
 	block scripts
+	script(src="/scripts/bundle.js",type="text/javascript")
 
 	//- script(type='text/javascript').
 	//- 	var _paq = _paq || [];
